--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,7 +32,7 @@
 	</div> <!--compliment div-->
 	
 	<div class = "case" >
-		<a href="http://ruby-doc.org/" class = "button leave" >I'm ready to soldier on.</a>
+		<a href="http://ruby-doc.org/" class = "button leave" >I'm ready to soldier on. How was this site made?</a>
 		<a href="/" class = "button meh" >I'm still emotionally vacant. give me another compliment.</a>
 	</div>	<!-- Links for another compliment or link to Ruby Docs -->
 
